feat(notification): expose preference API (#178)
